--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -395,6 +395,18 @@ select:disabled {
     background-color: #F2F2F2;
 }
 
+.code-area {
+    width: 100%;
+    height: 15em;
+    resize: none;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-right: 20%;
+    border-radius: 0.25rem;
+    border: 1px solid #F2F2F2;
+    background-color: #F2F2F2;
+}
+
 .btn {
   display: inline-block;
   font-weight: 400;
