--- a/securecoding/src/main/resources/templates/1/1.2.html
+++ b/securecoding/src/main/resources/templates/1/1.2.html
@@ -30,7 +30,7 @@
                     /*]]>*/
                </script>
               <!-- Vulnerable code -->
-              <textarea readonly class="area" th:text="${value}"></textarea>
+<!--              <textarea readonly class="area" th:text="${value}"></textarea>-->
             </div>
           </form>
       </div>
@@ -50,7 +50,7 @@
                     /*]]>*/
                 </script>
               <!-- Secure Code -->
-              <textarea readonly class="area" th:text="${value2}"></textarea>
+<!--              <textarea readonly class="area" th:text="${value2}"></textarea>-->
             </div>
           </form>
       </div>
