--- a/securecoding/src/main/resources/templates/2/2.8.code.html
+++ b/securecoding/src/main/resources/templates/2/2.8.code.html
@@ -41,6 +41,8 @@ public String RandomForm_vuln(HttpServletRequest request, Model model) {
 <!--                </pre>-->
             </div>
           </form>
+          <br />
+          <hr />
       </div>
       <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
@@ -67,10 +69,12 @@ public String RandomForm_secure(HttpServletRequest request, Model model) throws 
                 </code>
             </div>
           </form>
+          <br />
+          <hr />
       </div>
     </div>
       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" th:href="@{/2/8}">실습 하기</a></div>
+          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #F5Df4D" th:href="@{/2/8}">실습 하기</a></div>
       </div>
   </div>
 </section>
