--- a/securecoding/src/main/resources/templates/1/1.12.html
+++ b/securecoding/src/main/resources/templates/1/1.12.html
@@ -19,7 +19,7 @@
         <hr />
         <form action="/1/12/vuln" id="vulnerable12" method="post">
           <input type="text" id="url" name="url" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-          <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
           <br />
           <br />
           <div class="card h-100">
@@ -32,7 +32,7 @@
         <hr />
         <form action="/1/12/secure" id="secure12" method="post">
           <input type="text" id="url2" name="url2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-          <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
           <br />
           <br />
           <div class="card h-100">
