--- a/securecoding/src/main/resources/templates/1/1.13.html
+++ b/securecoding/src/main/resources/templates/1/1.13.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/13/vuln" id="vulnerable13" method="post">
             <input type="text" id="input" name="input" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" id="execute" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/1/13/secure" id="secure13" method="post">
             <input type="text" id="input2" name="input2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
