--- a/securecoding/src/main/resources/templates/1/1.14.html
+++ b/securecoding/src/main/resources/templates/1/1.14.html
@@ -20,7 +20,7 @@
           <form action="/1/14/vuln" id="vulnerable14" method="post">
               <input type="text" id="integer1" name="integer1" class="form-control" placeholder="정수 1" style="width: 80%; margin-right: 1%; margin-bottom: 2%; height: 50px; float: left" />
               <input type="text" id="integer2" name="integer2" class="form-control" placeholder="정수 2" style="width: 80%; margin-right: 1%; height: 50px; float: left" />
-              <button type="submit" class="btn" style="background-color: #F5Df4D; width: 18%; height: 110px;">계산</button>
+              <button type="submit" class="btn" style="background-color: #ffe74a; width: 18%; height: 110px;">계산</button>
             <br />
             <br />
             <div class="card h-100">
@@ -35,7 +35,7 @@
           <form action="/1/14/secure" id="secure14" method="post">
             <input type="text" id="integer3" name="integer3" class="form-control" placeholder="정수 1" style="width: 80%; margin-right: 1%; margin-bottom: 2%; height: 50px; float: left" />
             <input type="text" id="integer4" name="integer4" class="form-control" placeholder="정수 2" style="width: 80%; margin-right: 1%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 18%; height: 110px;">계산</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 18%; height: 110px;">계산</button>
             <br />
             <br />
             <div class="card h-100">
