--- a/securecoding/src/main/resources/templates/1/1.2.html
+++ b/securecoding/src/main/resources/templates/1/1.2.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/2/vuln" method="post">
             <input type="text" id="src" name="src" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -39,7 +39,7 @@
         <hr />
           <form action="/1/2/secure" id="secure2" method="post">
             <input type="text" id="src2" name="src2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" href="#">코드 보기</a></div>
     </div>
   </div>
 </section>
