--- a/securecoding/src/main/resources/templates/1/1.3.html
+++ b/securecoding/src/main/resources/templates/1/1.3.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/3/vuln" id="vulnerable3" method="post">
             <input type="text" id="fileName" name="fileName" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" id="execute" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/1/3/secure" id="secure3" method="post">
             <input type="text" id="fileName2" name="fileName2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
