--- a/securecoding/src/main/resources/templates/2/2.8.html
+++ b/securecoding/src/main/resources/templates/2/2.8.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/2/8/vuln" method="post">
             <input type="text" id="value" name="value" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/2/8/secure" method="post">
             <input type="text" id="value2" name="value2" placeholder="※ 난수 생성을 위한 별도의 입력값이 필요하지 않습니다." class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" th:href="@{/2/8/code}">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" th:href="@{/2/8/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
