--- a/securecoding/src/main/resources/templates/2/2.4.html
+++ b/securecoding/src/main/resources/templates/2/2.4.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/2/4/vuln" method="post">
             <input type="text" id="plainText" name="plainText" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/2/4/secure" method="post">
             <input type="text" id="plainText2" name="plainText2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
