--- a/securecoding/src/main/resources/templates/2/2.6.html
+++ b/securecoding/src/main/resources/templates/2/2.6.html
@@ -18,40 +18,51 @@
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
           <form action="#" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Vulnerable code -->
-<!--                <pre class="line-numbers" style="height: 30%;">-->
-                <code class="code-area" style="height: 15em"><textarea class="area" style="height: 15em">spring:
+            <div class="wrapper" style="width: 100%">
+              <div class="tabs">
+                <div class="tab">
+                  <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
+                  <label for="tab-1" class="tab-label">application.yml</label>
+                  <div class="tab-content">
+                    <code class="code-area" style="height: 8em"><textarea disabled wrap="off" class="area" style="height: 15em">spring:
   datasource:
     url: jdbc:mysql://localhost:3306/eqst?autoReconnecct=true
     username: root
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
-              </textarea>
-                </code>
-<!--                </pre>-->
+              </textarea></code>
+                  </div>
+                </div>
+              </div>
             </div>
+            <br />
+            <hr />
           </form>
       </div>
       <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
           <form action="#" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Secure Code -->
-                <code class="code-area" style="height: 15em"><textarea wrap="off" class="area" style="height: 15em">spring:
+            <div class="wrapper" style="width: 100%">
+              <div class="tabs">
+                <div class="tab">
+                  <input type="radio" name="css-tabs" id="tab-2" checked class="tab-switch">
+                  <label for="tab-2" class="tab-label">application.yml</label>
+                  <div class="tab-content">
+                    <code class="code-area" style="height: 8em"><textarea disabled wrap="off" class="area" style="height: 15em">spring:
   datasource:
     url: ENC(6phNp02w8Nu6Y3YA36xQ/iA1usR9kLRw6CXA3W5cxrkxh8MY+dFmUaWbVdcuz/Wl0FoCyM5CFeg3gDYagQ0Q7XgDJuQh2Qvw0AWsoxgzpdZO7BdzIwoJ9YftHi4l87NZ)
     username: ENC(BGA7U5z8uK7eaxCkw4qborLqSZyLC1z52Ww2072LB/JLtyTvFADzrbkqD08NyI7R)
     password: ENC(HUMoUunvEudkWKGBqWo+tpOyp3gcK2ctrKGYt6f/4Hli6lz59AuecFf24wJFHYpi)
     driver-class-name: ENC(Na2WjThM0IOnBA5fCbxOepbQWGG8A8FlSoYTkWXQBRMQTx3zlBqkUUy+zolH2rMerszHaNt4opJuuE6WubSWQw==)
-
-                </textarea>
-                </code>
+              </textarea></code>
+                  </div>
+                </div>
+              </div>
             </div>
           </form>
+        <br />
+        <hr />
       </div>
     </div>
   </div>
