--- a/securecoding/src/main/resources/templates/1/1.7.html
+++ b/securecoding/src/main/resources/templates/1/1.7.html
@@ -19,7 +19,7 @@
         <hr />
         <form action="/1/7/vuln" id="vulnerable7" method="post">
           <input type="text" id="url" name="url" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-          <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
           <br />
           <br />
           <div class="card h-100">
@@ -32,7 +32,7 @@
         <hr />
         <form action="/1/7/secure" id="secure7" method="post">
           <input type="text" id="url2" name="url2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-          <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+          <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
           <br />
           <br />
           <div class="card h-100">
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" th:href="@{/1/7/code}">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%; margin-bottom: 10%" th:href="@{/1/7/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
