--- a/securecoding/src/main/resources/templates/1/1.2.html
+++ b/securecoding/src/main/resources/templates/1/1.2.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%; margin-bottom: 10%" th:href="@{/1/2/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
