--- a/securecoding/src/main/resources/templates/2/2.13.html
+++ b/securecoding/src/main/resources/templates/2/2.13.html
@@ -18,11 +18,13 @@
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
           <form action="#" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Vulnerable code -->
-<!--                <pre class="line-numbers" style="height: 30%;">-->
-                <code class="code-area" style="height: 15em"><textarea class="area" style="height: 15em">@Service
+              <div class="wrapper" style="width: 100%">
+                  <div class="tabs">
+                      <div class="tab">
+                          <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
+                          <label for="tab-1" class="tab-label">MemberService.java</label>
+                          <div class="tab-content">
+                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">@Service
 @Transactional
 @RequiredArgsConstructor
 public class MemberService {
@@ -39,24 +41,30 @@ public class MemberService {
     public List<Member> findMembers() {
         return memberRepository.findAll();
     }
-              </textarea>
-                </code>
-<!--                </pre>-->
-            </div>
+    ...
+}</textarea></code>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </form>
+          <br />
+          <hr />
       </div>
       <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
           <form action="#" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Secure Code -->
-                <code class="code-area" style="height: 15em"><textarea class="area" style="height: 15em">@Service
+              <div class="wrapper" style="width: 100%">
+                  <div class="tabs">
+                      <div class="tab">
+                          <input type="radio" name="css-tabs" id="tab-2" checked class="tab-switch">
+                          <label for="tab-2" class="tab-label">MemberService.java</label>
+                          <div class="tab-content">
+                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">@Service
 @Transactional
 @RequiredArgsConstructor
 public class MemberService {
-
 
     private final MemberRepository memberRepository;
 
@@ -68,10 +76,15 @@ public class MemberService {
     public List<Member> findMembers() {
         return memberRepository.findAll();
     }
-                </textarea>
-                </code>
-            </div>
+...
+}</textarea></code>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </form>
+          <br />
+          <hr />
       </div>
     </div>
   </div>
