--- a/securecoding/src/main/resources/templates/2/2.4.code.html
+++ b/securecoding/src/main/resources/templates/2/2.4.code.html
@@ -55,8 +55,6 @@ public class AuthorityController {
                                 <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@Service
 public class AuthorityService {
 
-    private static AuthorityService authorityService;
-
     public static String WeakEncryptService(String plainText) {
 
         String DES = "";
@@ -126,7 +124,7 @@ public class AuthorityController {
                           </div>
                       </div>
                       <div class="tab">
-                          <input type="radio" name="css-tabs" id="tab-4" checked class="tab-switch">
+                          <input type="radio" name="css-tabs" id="tab-4" class="tab-switch">
                           <label for="tab-4" class="tab-label">class AES256</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">class AES256 {
