--- a/securecoding/src/main/resources/templates/2/2.9.html
+++ b/securecoding/src/main/resources/templates/2/2.9.html
@@ -20,7 +20,7 @@
           <form action="/2/9/vuln" method="post">
             <input type="text" id="username" name="username" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
             <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
             <br />
             <br />
             <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 저장되지 않습니다.</p>
@@ -36,7 +36,7 @@
           <form action="/2/9/secure" method="post">
             <input type="text" id="username2" name="username2" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
             <input type="password" id="password2" name="password2" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
             <br />
             <br />
             <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 저장되지 않습니다.</p>
