--- a/securecoding/src/main/resources/templates/2/2.7.html
+++ b/securecoding/src/main/resources/templates/2/2.7.html
@@ -17,7 +17,7 @@
       <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
-          <form action="/2/7/vuln" method="get">
+          <form action="#" method="get">
             <br />
             <div class="card h-100">
               <!-- Vulnerable code -->
@@ -30,7 +30,6 @@
         HashMap<String, String> rsaKeyPair = createKeypairAsString();
         String publicKey = rsaKeyPair.get("publicKey");
         String privateKey = rsaKeyPair.get("privateKey");
-
 
         String plainText = "password";
 
@@ -48,7 +47,7 @@
       <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
-          <form action="/2/7/secure" method="get">
+          <form action="#" method="get">
             <br />
             <div class="card h-100">
               <!-- Secure Code -->
