--- a/securecoding/src/main/resources/templates/2/2.14.html
+++ b/securecoding/src/main/resources/templates/2/2.14.html
@@ -14,13 +14,12 @@
     <p style="text-align: center">제2절 보안기능</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-      <div class="col mb-5" style="width: 40%; height: 200%"
-      >
+      <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
           <form action="/2/14/vuln" method="post">
             <input type="text" id="plainText" name="plainText" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -34,7 +33,7 @@
         <hr />
           <form action="/2/14/secure" method="post">
             <input type="text" id="plainText2" name="plainText2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -45,7 +44,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" th:href="@{/2/14/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
