--- a/securecoding/src/main/resources/templates/1/1.9.html
+++ b/securecoding/src/main/resources/templates/1/1.9.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/9/vuln" id="vulnerable9" method="post">
             <input type="text" id="word" name="word" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" id="execute" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/1/9/secure" id="secure9" method="post">
             <input type="text" id="word2" name="word2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
