--- a/securecoding/src/main/resources/templates/1/1.8.html
+++ b/securecoding/src/main/resources/templates/1/1.8.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/8/vuln" id="vulnerable8" method="post">
             <input type="text" id="filePath" name="filePath" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" id="execute" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/1/8/secure" id="secure8" method="post">
             <input type="text" id="filePath2" name="filePath2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
