--- a/securecoding/src/main/resources/templates/2/2.5.html
+++ b/securecoding/src/main/resources/templates/2/2.5.html
@@ -21,7 +21,7 @@
             <input type="text" id="name" name="name" class="form-control" placeholder="이름" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
             <input type="text" id="username" name="username" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
             <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
             <br />
             <br />
             <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 저장되지 않습니다.</p>
@@ -38,7 +38,7 @@
             <input type="text" id="name2" name="name2" class="form-control" placeholder="이름" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px" />
             <input type="text" id="username2" name="username2" class="form-control" placeholder="아이디" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
             <input type="password" id="password2" name="password2" class="form-control" placeholder="비밀번호" style="width: 80%; margin-left: 10%; margin-bottom: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 80%; height: 50px; margin-left: 10%">회원가입</button>
             <br />
             <br />
             <p style="margin-left: 10%; margin-bottom: 4%; color: #808080">※ 입력한 정보가 실제로 DB에 저장되지 않습니다.</p>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" href="#">코드 보기</a></div>
     </div>
   </div>
 </section>
